[project]
name = "nonebot-plugin-elf-rss-next"
version = "0.1.0"
description = "RSS订阅机器人“ELF_RSS”的独立插件版本"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-timeout>=5.0.1",
    "asyncache>=0.3.1",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot2>=2.4.3",
    "tinydb>=4.8.2",
    "yarl>=1.20.1",
]
